# hx_agentic_sdk

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.fast  README.md
.github/workflows/: release-node.yml  release-python.yml  release.yml
compose/: docker-compose.dev.yml
crates/haap-assembler/: Cargo.toml
crates/haap-assembler/src/: ipc_server.rs  lib.rs  main.rs  single_flight.rs  state.rs
crates/haap-authenticator/: Cargo.toml
crates/haap-authenticator/src/: ipc_server.rs  lib.rs  main.rs  registration_flow.rs  state.rs
crates/haap-rsv/: Cargo.toml  README.md
crates/haap-rsv-bin/: Cargo.toml
crates/haap-rsv-bin/src/: lib.rs  main.rs
crates/haap-rsv-bin/tests/: verify_endpoint.rs
crates/haap-rsv/examples/: embedded_rsv.rs
crates/haap-rsv/src/: authorizer.rs  error.rs  lib.rs  replay.rs  replay_store.rs  rsv.rs
crates/haap-rsv/tests/: cascade_rejections.rs  full_pipeline.rs
crates/haap-sdk-cli/: Cargo.toml
crates/haap-sdk-cli/examples/: basic_registration.rs  full_pipeline.rs  mcp_server_integration.rs  rsv_standalone.rs
crates/haap-sdk-cli/src/: commands.rs  main.rs
crates/haap-sdk-ipc/: Cargo.toml
crates/haap-sdk-ipc/src/: connection.rs  error.rs  framing.rs  lib.rs  paths.rs  peer_cred.rs
crates/haap-sdk-sealer/: Cargo.toml
crates/haap-sdk-sealer/src/: file_sealer.rs  kms_sealer.rs  lib.rs  os_keychain_sealer.rs  sealer.rs
crates/haap-sdk-types/: Cargo.toml
crates/haap-sdk-types/src/: config.rs  errors.rs  ipc.rs  lib.rs  material.rs  sealed.rs  token.rs  trust.rs  verified.rs
crates/haap-substrate-reader/: Cargo.toml
crates/haap-substrate-reader/src/: lib.rs
crates/haap-supervisor/: Cargo.toml
crates/haap-supervisor/src/: error.rs  lib.rs  lifecycle.rs  paths.rs  runtime.rs  supervisor.rs
crates/haap-tqs/: Cargo.toml
crates/haap-tqs/src/: ipc_server.rs  lib.rs  main.rs  queue.rs  state.rs
docker/bundle/: .env.example  README.md  docker-compose.yml  smoke-test.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INTEGRATION.md  INTEGRATION_TEST_SETUP.md  REDIS_SETUP.md  RELEASE.md  RSV_HTTP_API.md  STATUS_2026-05-15.md  STATUS_2026-06-02.md  SUPERVISOR_OPS.md  clean_slate_rebuild_closure_2026-05-15.md  clean_slate_rebuild_closure_2026-06-01.md  docker_bundle_closure_report_2026-05-15.md  initial_population_closure_report_2026-05-28.md  phase_0_helper_signatures.md  rsv_adapter_helper_signatures.md  rsv_cascade_adapter_closure_2026-05-15.md
node/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
node/examples/: minimal.ts
node/src/: agent.ts  errors.ts  index.ts  ipc.ts
node/tests/: agent.test.ts  ipc.test.ts  mockAssembler.ts
python/: .gitignore  README.md  pyproject.toml
python/examples/: minimal.py
python/src/hawcx_haap/: __init__.py  agent.py  errors.py  ipc.py  pipe_win.py
python/tests/: conftest.py  test_agent.py  test_ipc.py
tests/: integration_against_local_as.rs
