[workspace]
resolver = "2"
members = [
    "crates/haap-sdk-types",
    "crates/haap-sdk-ipc",
    "crates/haap-sdk-sealer",
    "crates/haap-substrate-reader",
    "crates/haap-rsv",
    "crates/haap-rsv-bin",
    "crates/haap-sdk-cli",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Hawcx Inc."]
repository = "https://github.com/hawcx/hx_agentic_sdk"
rust-version = "1.75"

[workspace.dependencies]
# Path-deps to hx_labs (RSV needs cascade + types; sealer + ipc + substrate-reader are SDK-owned)
haap-core = { path = "../hx_labs/crates/haap-core", default-features = false, features = ["redis-backend"] }
haap-crypto = { path = "../hx_labs/crates/haap-crypto" }
haap-ipc = { path = "../hx_labs/crates/haap-ipc" }
haap-wire = { path = "../hx_labs/crates/haap-wire" }
haap-redis = { path = "../hx_labs/crates/haap-redis" }

# SDK-internal crates (referenced via workspace = true)
haap-sdk-types = { path = "crates/haap-sdk-types" }
haap-sdk-ipc = { path = "crates/haap-sdk-ipc" }
haap-sdk-sealer = { path = "crates/haap-sdk-sealer" }
haap-substrate-reader = { path = "crates/haap-substrate-reader" }
haap-rsv = { path = "crates/haap-rsv" }

# External crates
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
async-trait = "0.1"
bytes = "1"
once_cell = "1"

# Sealer
argon2 = "0.5"
aes-gcm = "0.10"
keyring = "3"
rand = "0.8"

# Redis (substrate)
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
lru = "0.12"

# IPC + OS process identity
nix = { version = "0.27", features = ["socket", "fs"] }
libc = "0.2"

# CLI + HTTP server (RSV-bin)
clap = { version = "4", features = ["derive"] }
axum = "0.7"
base64 = "0.22"
