[package]
name = "haap-sdk-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "haap-sdk"
path = "src/main.rs"

[dependencies]
haap-sdk-types = { workspace = true }
haap-sdk-sealer = { workspace = true }
haap-substrate-reader = { workspace = true }
haap-supervisor = { workspace = true }
haap-rsv = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
haap-sdk-ipc = { workspace = true }
haap-sdk-types = { workspace = true }
haap-supervisor = { workspace = true }
haap-rsv = { workspace = true }
haap-substrate-reader = { workspace = true }
anyhow = { workspace = true }
