[package]
name = "haap-sdk-ipc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
haap-sdk-types = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
