[package]
name = "haap-sdk-sealer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
os-keychain-tests = []

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"

[dependencies]
haap-sdk-types = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
keyring = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
