[package]
name = "haap-sdk-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }
