[package]
name = "haap-substrate-reader"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
redis-tests = []

[dependencies]
haap-sdk-types = { workspace = true }
haap-redis = { workspace = true }
redis = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
