[package]
name = "haap-supervisor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
haap-sdk-types = { workspace = true }
haap-sdk-ipc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
